--- a/appointments.html
+++ b/appointments.html
@@ -38,7 +38,7 @@
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li class="menu-active"><a href="index.html">Home</a></li>
+                        <li class="menu-active"><a href="profile.html">Home</a></li>
                         <li><a href="appointments.html">Appointments</a></li>
                         <li><a href="patients.html">Patients</a></li>
                         <li><a href="contact.html">Contact</a></li> 
