--- a/AddRdv.html
+++ b/AddRdv.html
@@ -34,13 +34,13 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
-                    <a href="index.html"><img src="assets/images/logo/logo.png" alt="" title="" /></a>
+                    <a href="profile.php"><img src="assets/images/logo/logo.png" alt="" title="" /></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="profile.html">Home</a></li>
-                        <li><a href="appointments.html">Appointments</a></li>
-                        <li><a href="patients.html">Patients</a></li>
+                        <li><a href="appointments.php">Appointments</a></li>
+                        <li><a href="patients.php">Patients</a></li>
                         <li><a href="contact.html">Contact</a></li> 
                         <li><a href="contact.html">Statistics</a></li>                                        
                     </ul>
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Appointments</h1>
-                   </span> <a href="appointments.html">List </a>|</span> <a href="AddRdv.html">Add + </a>
+                   </span> <a href="appointments.php">List </a>|</span> <a href="AddRdv.html">Add + </a>
                 </div>
             </div><br><br>
             <div class="col-lg-5 offset-lg-1 align-self-center">
