--- a/profile.html
+++ b/profile.html
@@ -39,8 +39,8 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class="menu-active"><a href="profile.html">Home</a></li>
-                        <li><a href="appointments.html">Appointments</a></li>
-                        <li><a href="patients.html">Patients</a></li>
+                        <li><a href="appointments.php">Appointments</a></li>
+                        <li><a href="patients.php">Patients</a></li>
                         <li><a href="contact.html">Contact</a></li>	
                         <li><a href="contact.html">Statistics</a></li>		          				          
                     </ul>
