--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between d-flex">
                 <div id="logo">
-                    <a href="index.html"><img src="assets/images/logo/logo.png" alt="" title="" /></a>
+                    <a href="profile.html"><img src="assets/images/logo/logo.png" alt="" title="" /></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
